swagger model regenerated
